--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -81,33 +81,33 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-cache-${{ env.SAFE_ARCH }}-${{ github.sha }}
+          key: ${{ runner.os }}-v2-buildx-cache-${{ env.SAFE_ARCH }}-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx-cache-${{ env.SAFE_ARCH }}-
+            ${{ runner.os }}-v2-buildx-cache-${{ env.SAFE_ARCH }}-
 
       - name: Cache Maven
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ env.SAFE_ARCH }}-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-v2-maven-${{ env.SAFE_ARCH }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-${{ env.SAFE_ARCH }}-
+            ${{ runner.os }}-v2-maven-${{ env.SAFE_ARCH }}-
 
       - name: Cache packages cache
         uses: actions/cache@v2
         with:
           path:  ~/tdlight-java-natives/tdlight-java-natives/.cache
-          key: ${{ runner.os }}-packages-${{ env.SAFE_ARCH }}-${{ github.sha }}
+          key: ${{ runner.os }}-v2-packages-${{ env.SAFE_ARCH }}-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-packages-${{ env.SAFE_ARCH }}-
+            ${{ runner.os }}-v2-packages-${{ env.SAFE_ARCH }}-
 
       - name: Cache ccache
         uses: actions/cache@v2
         with:
           path: ~/.ccache
-          key: ${{ runner.os }}-ccache-${{ env.SAFE_ARCH }}-${{ github.sha }}
+          key: ${{ runner.os }}-v2-ccache-${{ env.SAFE_ARCH }}-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-ccache-${{ env.SAFE_ARCH }}-
+            ${{ runner.os }}-v2-ccache-${{ env.SAFE_ARCH }}-
 
       - name: Build image
         if: matrix.usedocker == 'true'
