--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -29,17 +29,21 @@ jobs:
           submodules: "recursive"
       - name: Setup Java (Snapshot)
         if: github.ref != 'refs/heads/master'
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
+          cache: maven
           server-id: mchv-snapshot-distribution
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Setup Java (Release)
         if: github.ref == 'refs/heads/master'
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
+          cache: maven
           server-id: mchv-release-distribution
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
