--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -2,6 +2,9 @@ name: Generate TdApi.java
 
 on:
   push:
+    branches:
+      - master
+      - develop
 
 jobs:
   build:
@@ -28,7 +31,7 @@ jobs:
         with:
           submodules: "recursive"
       - name: Setup Java (Snapshot)
-        if: github.ref != 'refs/heads/master'
+        if: github.ref == 'refs/heads/develop'
         uses: actions/setup-java@v3
         with:
           java-version: 17
@@ -37,7 +40,7 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Setup Java (Release)
-        if: github.ref == 'refs/heads/master'
+        if: github.ref != 'refs/heads/develop'
         uses: actions/setup-java@v3
         with:
           java-version: 17
