--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -123,13 +123,13 @@ jobs:
           extensions: readline
       - name: Install ubuntu 20.04 dependencies
         if: matrix.os == 'ubuntu-20.04'
-      - uses: awalsh128/cache-apt-pkgs-action@latest
+        uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-10 libc++-dev libc++abi-dev
           version: 1.0
       - name: Install ubuntu 22.04 dependencies
         if: matrix.os == 'ubuntu-22.04'
-      - uses: awalsh128/cache-apt-pkgs-action@latest
+        uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-14 libc++-dev libc++abi-dev
           version: 1.0
